# Predictive-Quantum-Scheduling-Framework

./: .gitignore  =0.32.0  =0.45.0  ACCELERATION_IMPLEMENTATION_COMPLETE.md  ACTIVE_FILES_VERIFIED.md  ADVANCED_BATTERY_ANALYTICS.md  ADVANCED_IMPROVEMENTS_ROADMAP.md  ADVANCED_OPTIMIZATIONS_README.md  AGGRESSIVE_IDLE_MANAGEMENT.md  ALL_IMPROVEMENTS_IMPLEMENTED.md  ALL_PHASES_COMPLETE.md  APPLE_SILICON_OPTIMIZATION_PLAN.md  BATTERY_AND_PERFORMANCE_IMPROVEMENTS.md  BATTERY_HISTORY_FIXES.md  BATTERY_METRICS_FIX.md  BRIEFCASE_BUILD_SUCCESS.md  BUILD_COMPLETE_SUMMARY.md  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  BUILD_SUCCESS_SUMMARY.md  BatteryOptimizerPro_Fixed.py  CLEANUP_COMPLETE.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_SYSTEM_READY.md  COMPLETION_REPORT.md  CONFIDENCE_IMPROVEMENTS_SUMMARY.md  CRITICAL_FIXES_APPLIED.md  CURRENT_DRAW_EXPLANATION.md  CURRENT_STATE_ASSESSMENT.md  CURRENT_STATUS_2025.md  DASHBOARD_TROUBLESHOOTING_GUIDE.md  DEVELOPMENT_GUIDELINES.md  DISTRIBUTED_OPTIMIZATION_NETWORK.md  ELEVATED_PRIVILEGES_GUIDE.md  ENGINE_AGNOSTIC_UPDATE.md  ENHANCED_EAS_INTEGRATION_GUIDE.md  ENHANCED_EAS_SUCCESS_SUMMARY.md  ERRORS_FIXED_FINAL.md  FEATURE_SCAFFOLDING.md  FINAL_BUG_FIXES_SUMMARY.md  (+321 more)
.kiro/specs/40-qubit-implementation/: REVOLUTIONARY_PERFORMANCE_STANDARDS.md  design.md  requirements.md  tasks.md
archive_20251025_171143/: ARCHIVE_SUMMARY.txt
archive_20251025_171143/build_scripts/: build_universal.py  build_universal_standalone.py
archive_20251025_171143/directories/backup_1760701064/: setup.py  universal_pqs_app.py
archive_20251025_171143/directories/pqsframework_builds/: briefcase.toml  intel_compatibility_test.py  pqs-icon.icns  prepare_build.sh  quantum_ml_persistence.py  quantum_performance_benchmarking.py  test_hybrid_integration.py  test_hybrid_system.py  test_intel_optimizations.py  test_quantum_ml_integration.py  universal_pqs_app.py  verify_advanced_features.py
archive_20251025_171143/directories/pqsframework_builds/req/: requirements-app-bundle.txt  requirements_quantum_ml.txt
archive_20251025_171143/directories/pqsframework_builds/static/: battery-history-new.js  battery-history.js
archive_20251025_171143/directories/pqsframework_builds/templates/: battery_history.html
archive_20251025_171143/directories/req/: requirements.txt
archive_20251025_171143/directories/resources/: icon.icns
archive_20251025_171143/docs/: ACADEMIC_VALIDATION_PLAN.md  DEVELOPMENT_PATTERNS_SUCCESS.md  DUAL_ENGINE_IMPLEMENTATION.md  DYNAMIC_LEARNING_SYSTEM.md  INTEL_COMPATIBILITY_GUIDE.md  LICENSE.md  ML_PERSISTENCE_FIXES.md  PRODUCTION_READY.md  QUANTUM_ENGINE_SELECTION_GUIDE.md  QUANTUM_MAX_IMPLEMENTATION_SUMMARY.md  REAL_QUANTUM_ML_IMPLEMENTATION.md  WARP.md
archive_20251025_171143/python_files/: =1.6.1  build_macos_app.sh  demo_comprehensive_optimization.py  enable_advanced_features.py  fix_briefcase_executable.sh  intel_2020_benchmark.py  metal_quantum_simulator.py  quantum_ml_environment.yml  quick_test_quantum_max.py  real_quantum_engine.py  requirements-briefcase.txt  runtime_hook.py  setup_quantum_ml_conda.sh  setup_quantum_ml_environment.sh
archive_20251025_171143/tests/: test_dual_engine.py  test_dynamic_learning.py  test_dynamic_simple.py  test_energy_savings_fix.py  test_idle_manager.py  test_qmax_simple.py  test_quantum_max.py
backup_1760701064/: README.md  pyproject.toml
pqs_framework/: __init__.py  __main__.py  auto_battery_protection.py  config.json  macos_authorization.py  maximum_battery_optimizer.py  native_window.py  qiskit_quantum_engine.py  quantum_max_integration.py  quantum_max_scheduler.py  quantum_ml_idle_optimizer.py  real_quantum_ml_system.py  ultimate_battery_optimizer.py  ultra_idle_battery_optimizer.py  universal_pqs_app.py
pqs_framework/templates/: battery_guardian_modern.html  battery_history.html  battery_modern.html  comprehensive_system_control.html  dashboard_modern.html  quantum_modern.html  unified_modern.html
pqsframework/: CHANGELOG  README.rst  pyproject.toml
pqsframework/src/pqsframework/: __main__.py  app.py  universal_pqs_app.py
pqsframework_builds/: PQS Framework 48-Qubit.spec  app.py  build_quantum_ml_app.py  build_universal_binary.py  create_dmg.sh  entitlements.plist  gpu_acceleration.py  intel_optimized_quantum_ml.py  quantum_ml_hybrid.py  quantum_ml_integration.py  quantum_ml_interface.py  real_ml_system.py  real_quantum_ml_system.py  real_quantum_ml_system_broken.py  requirements_filtered.txt  setup.py
pqsframework_builds/req/: requirements-testing.txt
pqsframework_builds/templates/: battery_monitor.html  comprehensive_system_control.html  quantum_dashboard_enhanced.html  universal_dashboard.html
quantum_ml_311/: pyvenv.cfg
req/: requirements-quantum-ml.txt
src/pqs_framework/: __init__.py  __main__.py  app.py  universal_pqs_app.py
src/pqs_framework/static/: themes.css
src/pqs_framework/templates/: battery_history.html  battery_monitor.html  comprehensive_system_control.html
static/: battery-history-simple.js
templates/: base_modern.html  battery_guardian.html  battery_history.html  battery_modern.html  battery_monitor.html  comprehensive_system_control.html  dashboard.html  dashboard_modern.html  eas_dashboard.html  enhanced_eas_dashboard.html  index.html  process_monitor.html  production_dashboard.html  quantum_dashboard.html  quantum_dashboard_enhanced.html  quantum_modern.html  real_time_eas_monitor.html  system_control_modern.html  technical_validation.html  working_enhanced_eas_dashboard.html  working_real_time_eas_monitor.html
