[tool.briefcase]
project_name = "PQS Framework"
bundle = "com.pqs"
version = "1.0.0"
url = "https://github.com/pqs/framework"
author = "PQS Framework"
author_email = "info@pqs.framework"

[tool.briefcase.app.pqs_framework]
formal_name = "PQS Framework"
description = "Quantum-ML Power Management System"
icon = "pqs_icon"
sources = ["pqs_framework"]
requires = [
    "flask>=3.0.0",
    "psutil>=5.9.0",
    "pyobjc-framework-WebKit>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-core>=10.0",
]

[tool.briefcase.app.pqs_framework.macOS]
universal_build = true
deployment_target = "15.0"

[build-system]
requires = ["briefcase"]

[project]
name = "pqs_framework"
version = "1.0.0"
description = "Quantum-ML Power Management System"
authors = [{name = "PQS Framework", email = "info@pqs.framework"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
